--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,20 @@
         android:theme="@style/Theme.PicoBotella7"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreen"
-            android:exported="true" >
+            android:name=".view.fragment.Home"
+            android:exported="false" />
+        <activity
+            android:name=".view.SplashScreen"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:name=".view.MainActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
