--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.PicoBotella7"
         tools:targetApi="31">
         <activity
-            android:name=".view.fragment.Home"
+            android:name=".view.fragment.HomeFragment"
             android:exported="false" />
         <activity
             android:name=".view.SplashScreen"
