--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
         android:roundIcon="@mipmap/ic_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PicoBotella7"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true"
+        >
         <activity
-            android:name=".view.fragment.Home"
+            android:name=".view.fragment.HomeFragment"
             android:exported="false" />
         <activity
             android:name=".view.SplashScreen"
